<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.LoginFragment">

        <TextView
            android:id="@+id/loginPageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:textSize="40dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:text="@string/loginHeader" />

        <TextView
            android:id="@+id/usernamePrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="20dp"
            android:text="@string/enterEmailPrompt" />

        <EditText
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="20"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/passwordPrompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="20dp"
            android:text="@string/enterPasswordPrompt" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/submitLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginButtonPrompt" />

        <Button
            android:id="@+id/goToCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/createAccountPrompt" />

</LinearLayout>