<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_map"
    tools:context=".ui.LandingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:layout_height="158dp"
            android:src="@drawable/logo_cropped" />

        <TextView
            android:id="@+id/loginPageTitle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="40sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/goToQuizButton"
            android:text="@string/quizButtonPrompt"
            android:layout_width="300dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:background="@drawable/roundedbutton"
            android:textAlignment="center"
            android:textColor="#E8EAF6"
            android:textStyle="bold"
            android:visibility="visible"/>

        <Button
            android:id="@+id/showMatchedCityButton"
            android:text="@string/currentMatchedCityPrompt"
            android:layout_width="300dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:background="@drawable/roundedbutton"
            android:textAlignment="center"
            android:textColor="#E8EAF6"
            android:textStyle="bold"
            android:visibility="visible"/>

        <Button
            android:id="@+id/showCoordinatesButton"
            android:text="@string/showCoordinatesButtonPrompt"
            android:layout_width="300dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:background="@drawable/roundedbutton"
            android:textAlignment="center"
            android:textColor="#E8EAF6"
            android:textStyle="bold"
            android:visibility="visible"/>

        <Button
            android:id="@+id/logoutButton"
            android:text="@string/logoutButtonPrompt"
            android:layout_width="300dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:background="@drawable/roundedbutton"
            android:textAlignment="center"
            android:textColor="#E8EAF6"
            android:textStyle="bold"
            android:visibility="visible"/>

        <Button
            android:id="@+id/deleteAccountButton"
            android:text="@string/deleteButtonPrompt"
            android:layout_width="300dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:background="@drawable/roundedbutton"
            android:textAlignment="center"
            android:textColor="#E8EAF6"
            android:textStyle="bold"
            android:visibility="visible"/>


    </LinearLayout>
</ScrollView>

