<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/loginPageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:text="@string/createAccountPrompt" />

        <TextView
            android:id="@+id/usernamePrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            android:text="@string/enterEmailPrompt" />

        <EditText
            android:id="@+id/newAccountEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="20"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/passwordPrompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            android:text="@string/enterPasswordPrompt" />

        <EditText
            android:id="@+id/newAccountPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/passwordPromptConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            android:text="@string/confirmPasswordPrompt" />

        <EditText
            android:id="@+id/newAccountPasswordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:inputType="textPassword"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/submitCreateAccountButton"
            android:text="@string/createAccountPrompt"
            android:textAlignment="center"
            android:background="@drawable/roundedbutton"
            android:textColor="#E8EAF6"
            android:textStyle="bold"
            android:visibility="visible"
            android:layout_width="300dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"/>
    </LinearLayout>
</ScrollView>