<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:text="We recommend Phoenix!"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="245dp"
            android:src="@drawable/phoenix" />

        <TextView
            android:id="@+id/briefDescriptionTextView"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/phoenixDesc"/>

        <TextView
            android:id="@+id/costOfLivingTextView"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/phoenixCOL"/>

        <TextView
            android:id="@+id/openingsOrParkTextView"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/weatherSummer"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/weatherWinter"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/returnHomeButton"
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:background="@drawable/roundedbutton"
            android:textAlignment="center"
            android:textColor="#E8EAF6"
            android:textStyle="bold"
            android:visibility="visible"
            android:text="@string/returnHomePrompt"/>
    </LinearLayout>
</ScrollView>